career page changes

--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -83,7 +83,7 @@
                             </svg>
                     </div>
                     <h3 class="career-card-text-heading">
-                        CONTENT WRITER
+                        Web designer
                     </h3>
                     <p class="exp-text primery-text">(2+ Years) Mohali</p>
                     <div class="bnt-wrap">
@@ -97,7 +97,7 @@
                             </svg>
                     </div>
                     <h3 class="career-card-text-heading">
-                        CONTENT WRITER
+                        shopify developer
                     </h3>
                     <p class="exp-text primery-text">(2+ Years) Mohali</p>
                     <div class="bnt-wrap">
@@ -111,7 +111,7 @@
                             </svg>
                     </div>
                     <h3 class="career-card-text-heading">
-                        CONTENT WRITER
+                        graphic designer
                     </h3>
                     <p class="exp-text primery-text">(2+ Years) Mohali</p>
                     <div class="bnt-wrap">
