--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -38,64 +38,6 @@
                     </p>
                 </div>
             </div>
-            <!-- <div class="out-team-all-wrap flex">
-                <div class="team-member-card">
-                    <div class="card-inner-member">
-                        <div class="card-member-front">
-                            <img src="../../assets/image/team-member/indersain.webp" width="100%" alt="inder">
-                            <div class="card-detail-wrap">
-                                <h4 class="member-name">Inder Suthar</h4>
-                                <p class="designation">Front-end developer</p>
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 class="member-name">Inder Suthar</h4>
-                            <p class="designation">Front-end developer</p>
-                            <p class="discription-member">
-                                Inder Suthar, an adept Front-end Developer, is distinguished by his skillful coding and commitment to creating seamless user interfaces. With a keen understanding of the latest web technologies, Inder transforms design concepts into interactive and visually appealing websites.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-member-card">
-                    <div class="card-inner-member">
-                        <div class="card-member-front">
-                            <img src="../../assets/image/team-member/vikash.webp" width="100%" alt="tanish">
-                            <div class="card-detail-wrap">
-                                <h4 class="member-name">Vikas Kumar</h4>
-                                <p class="designation">Web designer</p>
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 class="member-name">Vikas Kumar</h4>
-                            <p class="designation">Web designer</p>
-                            <p class="discription-member">
-                                Vikas Thakur, an accomplished Web Designer, brings a fusion of creativity and technical prowess to every project. With a keen eye for aesthetics and a deep understanding of user experience, Vikas consistently produces visually stunning and functional designs.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-member-card">
-                    <div class="card-inner-member">
-                        <div class="card-member-front">
-                            <img src="../../assets/image/team-member/loveleen.webp" width="100%" alt="tanish">
-                            <div class="card-detail-wrap">
-                                <h4 class="member-name">Loveleen Kaur</h4>
-                                <p class="designation">Web designer</p>
-                            </div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 class="member-name">Loveleen Kaur</h4>
-                            <p class="designation">Web designer</p>
-                            <p class="discription-member">
-                                Loveleen Kaur, a highly skilled Web Designer, is celebrated for her ability to blend artistic creativity with technical precision. With an innate sense of design aesthetics, Loveleen consistently delivers websites that captivate and engage users.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-member-card hide">
-                </div>
-            </div> -->
             <div class="all-team-cards-wrapper flex">
                 <div class="card member-card">
                     <div class="content">
@@ -238,25 +180,22 @@
                     <div class="progress-bar-wrap">
                         <h4 class="bar-text">Technical Skill</h4>
                        <div class="barra">
-                        <div class="barra-nivel" data-nivel="90%">
-                        </div>
                         <span class="barra-title-text">Great</span>
+                        <span class="persent" data-progress="90"></span>
                        </div>
                     </div>
                     <div class="progress-bar-wrap">
                         <h4 class="bar-text">Technical Skill</h4>
                        <div class="barra">
-                        <div class="barra-nivel" data-nivel="80%">
-                        </div>
                         <span class="barra-title-text">Great</span>
+                        <span class="persent" data-progress="80"></span>
                        </div>
                     </div>
                     <div class="progress-bar-wrap">
                         <h4 class="bar-text">Technical Skill</h4>
                        <div class="barra">
-                        <div class="barra-nivel" data-nivel="95%">
-                        </div>
                         <span class="barra-title-text">Great</span>
+                        <span class="persent" data-progress="95"></span>
                        </div>
                     </div>
                 </div>
