--- a/src/app/blog-list/blog-list.component.css
+++ b/src/app/blog-list/blog-list.component.css
@@ -4,11 +4,17 @@
 .blogs-section .our_work_all_wrap .blog_cards_wrapper {
    row-gap: 50px;
 }
+.blogs-section .our_work_all_wrap .service-head .service-text p {
+    padding-right: 20px;
+}
 @media only screen and (max-width:767px) {
     .blogs-section {
         padding: 70px 0 70px;
     }
     .blogs-section .our_work_all_wrap .blog_cards_wrapper {
         row-gap: 30px;
+    }
+    .blogs-section .our_work_all_wrap .service-head .service-text p {
+        padding-right: 0px;
     }
 }
