--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -1,7 +1,7 @@
 <section class="blogs-section">
     <div class="container">
         <div class="our_work_all_wrap">
-            <h3 class="green-text">Latest News</h3>
+            <h1 class="green-text">Latest News</h1>
             <div class="service-head flex space-between">
                 <div class="service-titel">
                     <h2>From Industry Insights to Personal Growth</h2>
@@ -15,7 +15,7 @@
             <div class="blog_cards_wrapper flex" id="blogFilter">
                 <a routerLink="/resource" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-one.webp" alt="blog-one">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 02, 2024</h3>
@@ -24,7 +24,7 @@
                 </a>
                 <a routerLink="/resource-3" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-two.webp" alt="blog-two">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 21, 2024</h3>
@@ -33,7 +33,7 @@
                 </a>
                 <a routerLink="/resource-2" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-three.webp" alt="blog-three">
                     </div>
                     <div class="blog-title-text">
                         <h3>February 06, 2024</h3>
@@ -42,7 +42,7 @@
                 </a>
                 <a routerLink="/resource-4" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-four.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-four.webp" alt="blog-four">
                     </div>
                     <div class="blog-title-text">
                         <h3>February 27, 2024</h3>
@@ -51,7 +51,7 @@
                 </a>
                 <a routerLink="/resource-5" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-five.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-five.webp" alt="blog-five">
                     </div>
                     <div class="blog-title-text">
                         <h3>March 11, 2024</h3>
@@ -60,7 +60,7 @@
                 </a>
                 <a routerLink="/resource-6" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-six.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-six.webp" alt="blog-six">
                     </div>
                     <div class="blog-title-text">
                         <h3>March 30, 2024</h3>
@@ -69,7 +69,7 @@
                 </a>
                 <a routerLink="/resource-7" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-seven.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-seven.webp" alt="blog-seven">
                     </div>
                     <div class="blog-title-text">
                         <h3>April 13, 2024</h3>
@@ -78,7 +78,7 @@
                 </a>
                 <a routerLink="/resource-8" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-eight.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-eight.webp" alt="blog-eight">
                     </div>
                     <div class="blog-title-text">
                         <h3>April 28, 2024</h3>
@@ -87,7 +87,7 @@
                 </a>
                 <a routerLink="/resource-9" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-nine.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-nine.webp" alt="blog-nine">
                     </div>
                     <div class="blog-title-text">
                         <h3>May 05, 2024</h3>
@@ -96,7 +96,7 @@
                 </a>
                 <a routerLink="/resource-10" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-ten.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-ten.webp" alt="blog-ten">
                     </div>
                     <div class="blog-title-text">
                         <h3>May 29, 2024</h3>
@@ -105,7 +105,7 @@
                 </a>
                 <a routerLink="/resource-11" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-eleven.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-eleven.webp" alt="blog-eleven">
                     </div>
                     <div class="blog-title-text">
                         <h3>june 09, 2024</h3>
@@ -114,7 +114,7 @@
                 </a>
                 <a routerLink="/resource-12" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-twelve.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-twelve.webp" alt="blog-twelve">
                     </div>
                     <div class="blog-title-text">
                         <h3>June 23, 2024</h3>
@@ -123,7 +123,7 @@
                 </a>
                 <a routerLink="/resource-13" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-thirteen.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-thirteen.webp" alt="blog-thirteen">
                     </div>
                     <div class="blog-title-text">
                         <h3>July 13, 2024</h3>
@@ -132,7 +132,7 @@
                 </a>
                 <a routerLink="/resource-14" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-fourteen.webp" alt="blog">
+                        <img src="../../assets/image/blogs/blog-fourteen.webp" alt="blog-fourteen">
                     </div>
                     <div class="blog-title-text">
                         <h3>July 30, 2024</h3>
