img & blog date changes

--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -18,7 +18,7 @@
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog-one">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 02, 2024</h3>
+                        <h3>January 02, 2023</h3>
                         <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
@@ -27,7 +27,7 @@
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog-two">
                     </div>
                     <div class="blog-title-text">
-                        <h3>January 21, 2024</h3>
+                        <h3>January 21, 2023</h3>
                         <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
@@ -36,7 +36,7 @@
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog-three">
                     </div>
                     <div class="blog-title-text">
-                        <h3>February 06, 2024</h3>
+                        <h3>February 06, 2023</h3>
                         <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
@@ -45,7 +45,7 @@
                         <img src="../../assets/image/blogs/blog-four.webp" alt="blog-four">
                     </div>
                     <div class="blog-title-text">
-                        <h3>February 27, 2024</h3>
+                        <h3>February 27, 2023</h3>
                         <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
                     </div>
                 </a>
@@ -54,7 +54,7 @@
                         <img src="../../assets/image/blogs/blog-five.webp" alt="blog-five">
                     </div>
                     <div class="blog-title-text">
-                        <h3>March 11, 2024</h3>
+                        <h3>March 11, 2023</h3>
                         <p>How to Build a Winning Shopify Store Design</p>
                     </div>
                 </a>
@@ -63,8 +63,8 @@
                         <img src="../../assets/image/blogs/blog-six.webp" alt="blog-six">
                     </div>
                     <div class="blog-title-text">
-                        <h3>March 30, 2024</h3>
-                        <p>use & benifit Language Translator - LangShop App</p>
+                        <h3>March 30, 2023</h3>
+                        <p>Unlock Global Growth: Harness the Power of Language Translation with LangShop App</p>
                     </div>
                 </a>
                 <a routerLink="/resource-7" class="blog_card_wrap">
@@ -72,7 +72,7 @@
                         <img src="../../assets/image/blogs/blog-seven.webp" alt="blog-seven">
                     </div>
                     <div class="blog-title-text">
-                        <h3>April 13, 2024</h3>
+                        <h3>April 13, 2023</h3>
                         <p>use & benifit SEO HTML and XML Sitemap</p>
                     </div>
                 </a>
@@ -81,7 +81,7 @@
                         <img src="../../assets/image/blogs/blog-eight.webp" alt="blog-eight">
                     </div>
                     <div class="blog-title-text">
-                        <h3>April 28, 2024</h3>
+                        <h3>April 28, 2023</h3>
                         <p>use & benifit Pickup Delivery Date - Pickeasy App</p>
                     </div>
                 </a>
@@ -90,7 +90,7 @@
                         <img src="../../assets/image/blogs/blog-nine.webp" alt="blog-nine">
                     </div>
                     <div class="blog-title-text">
-                        <h3>May 05, 2024</h3>
+                        <h3>May 05, 2023</h3>
                         <p>use & benifit Abra Auto Applied Discounts</p>
                     </div>
                 </a>
@@ -99,7 +99,7 @@
                         <img src="../../assets/image/blogs/blog-ten.webp" alt="blog-ten">
                     </div>
                     <div class="blog-title-text">
-                        <h3>May 29, 2024</h3>
+                        <h3>May 29, 2023</h3>
                         <p>EG Auto Add to Cart Free Gift</p>
                     </div>
                 </a>
@@ -108,7 +108,7 @@
                         <img src="../../assets/image/blogs/blog-eleven.webp" alt="blog-eleven">
                     </div>
                     <div class="blog-title-text">
-                        <h3>june 09, 2024</h3>
+                        <h3>june 09, 2023</h3>
                         <p>Section Store</p>
                     </div>
                 </a>
@@ -117,7 +117,7 @@
                         <img src="../../assets/image/blogs/blog-twelve.webp" alt="blog-twelve">
                     </div>
                     <div class="blog-title-text">
-                        <h3>June 23, 2024</h3>
+                        <h3>June 23, 2023</h3>
                         <p>Shipping Rates - Shipeasy</p>
                     </div>
                 </a>
@@ -126,7 +126,7 @@
                         <img src="../../assets/image/blogs/blog-thirteen.webp" alt="blog-thirteen">
                     </div>
                     <div class="blog-title-text">
-                        <h3>July 13, 2024</h3>
+                        <h3>July 13, 2023</h3>
                         <p>Essential Countdown Timer Bar</p>
                     </div>
                 </a>
@@ -135,7 +135,7 @@
                         <img src="../../assets/image/blogs/blog-fourteen.webp" alt="blog-fourteen">
                     </div>
                     <div class="blog-title-text">
-                        <h3>July 30, 2024</h3>
+                        <h3>July 30, 2023</h3>
                         <p>Pixelio Multi Facebook Pixels</p>
                     </div>
                 </a>
