--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -97,6 +97,29 @@
                     <button class="cdk-contact-btn">SUBMIT</button>
                 </div>
             </form>
+            <!-- <form action="" class="contact-form">
+                <div class="name-field-wrap flex space-between">
+                    <div class="name-form flex_two flex-column">
+                        <label for="f-name">First Name <span>*</span></label>
+                        <input type="text" id="f-name" required placeholder="First Name">
+                    </div>
+                    <div class="name-form flex_two flex-column">
+                        <label for="l-name">Last Name <span>*</span></label>
+                        <input type="text" id="l-name" required placeholder="Last Name">
+                    </div>
+                </div>
+                <div class="other-field flex_two flex-column">
+                    <label for="e-mail">Email <span>*</span></label>
+                    <input type="email" id="e-mail" required placeholder="Email">
+                    <label for="phone">Phone Number <span>*</span></label>
+                    <input type="number" id="phone" required placeholder="Phone Number">
+                </div>
+                <div class="msg-field flex_two flex-column">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                </div>
+                <button class="cdk-contact-btn">SUBMIT</button>
+            </form> -->
         </div>
     </div>
 </section>
