--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -41,7 +41,7 @@
                         </div>
                         <h3 class="card-heading">Drop us a line</h3>
                         <a href="mailto:info@codesdesk.com" class="card-text">
-                            Info@Codesdesk.Com
+                            info@codesdesk.com
                         </a>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                 <h3 class="green-text">REQUEST A QUOTE</h3>
                 <h1 class="second-heading">How May We Help You!</h1>
             </div>
-            <form action="" class="contact_form" autocomplete="noac">
+            <!-- <form action="" class="contact_form" autocomplete="noac">
                 <div class="name-fields-wrap flex">
                     <fieldset>
                         <input class="textfield__input" type="text" name="firstname" autocomplete="noac" autofill="off" id="firstname" required>
@@ -96,8 +96,8 @@
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
                     <button class="cdk-contact-btn">SUBMIT</button>
                 </div>
-            </form>
-            <!-- <form action="" class="contact-form">
+            </form> -->
+            <form action="" class="contact-form">
                 <div class="name-field-wrap flex space-between">
                     <div class="name-form flex_two flex-column">
                         <label for="f-name">First Name <span>*</span></label>
@@ -119,7 +119,7 @@
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
                 </div>
                 <button class="cdk-contact-btn">SUBMIT</button>
-            </form> -->
+            </form>
         </div>
     </div>
 </section>
