--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -260,7 +260,7 @@
                         <h4 class="card-heading">Egyptianqueenbeauty</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
-                    <div class="work-image_four work-image_all">
+                    <!-- <div class="work-image_four work-image_all">
                         <div class="card-h-txt">
                             <img class="logo_card igluu" src="../../assets/image/attachment-igluu.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -273,6 +273,22 @@
                     </div>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Igluu Meal Prep</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div> -->
+                    <div class="work-image_four work-image_all">
+                        <div class="card-h-txt">
+                            <img class="logo_card mresi" src="../../assets/image/attachment-mersi.png" width="100%" alt="">
+                            <!-- <h3 class="logo_card">Mersi Distribution</h3> -->
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Mersi Distribution</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_5.webp" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_5-mobile.webp" alt="">
+                    </div>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">Mersi Distribution</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
                 </div>
