--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -185,14 +185,14 @@
                        </div>
                     </div>
                     <div class="progress-bar-wrap">
-                        <h4 class="bar-text">Technical Skill</h4>
+                        <h4 class="bar-text">Creativity</h4>
                        <div class="barra">
                         <span class="barra-title-text">Great</span>
                         <span class="persent" data-progress="80"></span>
                        </div>
                     </div>
                     <div class="progress-bar-wrap">
-                        <h4 class="bar-text">Technical Skill</h4>
+                        <h4 class="bar-text">Teamwork</h4>
                        <div class="barra">
                         <span class="barra-title-text">Great</span>
                         <span class="persent" data-progress="95"></span>
