--- a/src/app/our-work/our-work.component.html
+++ b/src/app/our-work/our-work.component.html
@@ -63,20 +63,20 @@
                         <h4 class="card-heading">Egyptian queen beauty</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
-                    <div class="work-image_four work-image_all">
+                    <a routerLink="/fames-chocolates" class="work-image_one work-image_all">
                         <div class="card-h-txt">
-                            <img class="logo_card igluu" src="../../assets/image/attachment-igluu.png" width="100%" alt="">
-                            <!-- <h3 class="logo_card">Igluu Meal Prep</h3> -->
+                            <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
+                            <h3 class="logo_card">FAMESCHOCOLATES</h3>
                             <div class="bottom_card">
-                            <h4 class="card-heading">Igluu Meal Prep</h4>
+                            <h4 class="card-heading">Fameschocolates</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_4.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_4-mobile.webp" alt="">
-                    </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_9.webp" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_9-mobile.webp" alt="">
+                    </a>
                     <div class="our_card_bottom_text mobile">
-                        <h4 class="card-heading">Igluu Meal Prep</h4>
+                        <h4 class="card-heading">Fameschocolates</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                             <img class="logo_card protech" src="../../assets/image/attachment-protech.png" width="100%" alt="">
                             <!-- <h3 class="logo_card">Protech</h3> -->
                             <div class="bottom_card">
-                            <h4 class="card-heading">PROTECH MONTE-CARLO</h4>
+                            <h4 class="card-heading">Protech Monte-Carlo</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                         <img class="mobile" src="../../assets/image/portfolio/our_work_7-mobile.webp" alt="">
                     </a>
                     <div class="our_card_bottom_text mobile">
-                        <h4 class="card-heading">PROTECH MONTE-CARLO</h4>
+                        <h4 class="card-heading">Protech Monte-Carlo</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
                     <a routerLink="/gripps" class="work-image_four work-image_all">
@@ -154,22 +154,6 @@
             </div>
             <div class="our_work_body_wrap hide more-work-container" style="display: none;">
                 <div class="our_work-images_wrap flex wrap">
-                    <a routerLink="/fames-chocolates" class="work-image_one work-image_all">
-                        <div class="card-h-txt">
-                            <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
-                            <h3 class="logo_card">FAMESCHOCOLATES</h3>
-                            <div class="bottom_card">
-                            <h4 class="card-heading">Fameschocolates</h4>
-                            <p class="card-txt">Shopify Plus Design & Build</p>
-                            </div>
-                        </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_9.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_9-mobile.webp" alt="">
-                    </a>
-                    <div class="our_card_bottom_text mobile">
-                        <h4 class="card-heading">Fameschocolates</h4>
-                        <p class="card-txt">Shopify Plus Design & Build</p>
-                    </div>
                     <a routerLink="/anansi-palace" class="work-image_two work-image_all">
                         <div class="card-h-txt">
                             <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
