--- a/src/app/terms-conditions/terms-conditions.component.html
+++ b/src/app/terms-conditions/terms-conditions.component.html
@@ -46,7 +46,7 @@
                         <strong>Third-party Social Media Service</strong>Third-party Social Media Service means any services or content (including data, information, products or services) provided by a third-party that may be displayed, included or made available by the Service.
                     </li>
                     <li class="list-item primery-text">
-                        <strong>Website</strong> refers to Codesdesk Technology, accessible from <a href="https://www.codesdesk.com">https://www.codesdesk.com</a>
+                        <strong>Website</strong> refers to Codesdesk Technology, accessible from <a href="https://www.codesdesk.co.in">https://www.codesdesk.co.in</a>
                     </li>
                     <li class="list-item primery-text">
                         <strong>You</strong> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.
@@ -180,7 +180,7 @@
                         By email: <a href="mailto:info@codesdesk.com">info@codesdesk.com</a>
                     </li>
                     <li class="list-item primery-text">
-                        By visiting this page on our website: <a href="https://codesdesk.com/contactus">https://codesdesk.com/contactus</a>
+                        By visiting this page on our website: <a href="https://codesdesk.co.in/contact">https://codesdesk.co.in/contact</a>
                     </li>
                     <li class="list-item primery-text">
                         By phone number: <a href="tel+91-9988-074677">+91-9988-074677</a>
