--- a/src/app/gripps/gripps.component.html
+++ b/src/app/gripps/gripps.component.html
@@ -225,7 +225,7 @@
                         <div class="card-h-txt">
                             <img class="logo_card protech" src="../../assets/image/attachment-protech.png" width="100%" alt="">
                             <div class="bottom_card">
-                            <h4 class="card-heading">PROTECH MONTE-CARLO</h4>
+                            <h4 class="card-heading">Protech Monte-Carlo</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
@@ -270,16 +270,6 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-9.webp" width="100%" alt="case-1">
-                    </a>
-                    <a routerLink="" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
-                            <img class="logo_card igluu" src="../../assets/image/attachment-igluu.png" width="100%" alt="">
-                            <div class="bottom_card">
-                            <h4 class="card-heading">Igluu Meal Prep</h4>
-                            <p class="card-txt">Shopify Plus Design & Build</p>
-                            </div>
-                        </div>
-                        <img src="../../assets/image/portfolio/case/case-10.webp" width="100%" alt="case-1">
                     </a>
                 </ngx-slick-carousel>
             </div>
