--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -77,21 +77,26 @@ header.sticky {
     height: 25px;
 }
     #toggle div {
-    width: 100%;
-    height: 5px;
+    width: 70%;
+    height: 2px;
     background: white;
     margin: 4px auto;
     transition: all 0.3s;
     backface-visibility: hidden;
 }
 #toggle.on .one {
-    transform: rotate(45deg) translate(5px, 5px);
+    transform: rotate(45deg) translate(4.5px, 5px);
 }
 #toggle.on .two {
     opacity: 0;
 }
+#toggle div.two {
+    width: 45%;
+    margin-left: auto;
+    margin-right: 4px;
+}
 #toggle.on .three {
-    transform: rotate(-45deg) translate(7px, -8px);
+    transform: rotate(-45deg) translate(4px, -4px);
 }
 #menu {
     display: none;
@@ -178,9 +183,6 @@ header.sticky {
     #toggle {
         display: block;
     }
-    #toggle .one {
-        margin-top: 0px !important;
-    }
     .logo-wrap {
         padding: 12px 0;
     }
@@ -239,13 +241,16 @@ header.sticky {
     #menu .menu-ul-mobile .dm-service span svg {
         display: block;
     }
+    #menu .menu-ul-mobile .dm-service .tab-heading.on svg {
+        rotate: 180deg;
+    }
     .tabcontent {
         max-width: 100%;
         padding: 0;
         display: none;
     }
     .tabcontent ul li {
-        padding: 20px 20px 10px !important;
+        padding: 20px 20px 10px 30px !important;
     }
     .tabcontent ul li a {
         font-size: 14px !important;
