--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
                                     <div class="mega-text-wrap">
                                         <h4 class="megatext">Introduce your business to the future-ready sector of innovators and executors.</h4>
                                     </div>
-                                    <a href="" class="cdk-btn-transparent">Let's Connect</a>
+                                    <a routerLink="/contact" class="cdk-btn-transparent">Let's Connect</a>
                                 </div>
                                 <div class="mega-side-right">
                                     <h2 class="mega-heading">services</h2>
@@ -77,9 +77,7 @@
                 </li>
                 <li class="dm-service">
                     <div class="flex">
-                        <a class="menu-item" routerLinkActive="active" routerLink="/service">Service</a><span class="tab-heading"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
-                            <path d="M7.83105 9.84547C8.48183 10.4963 9.53871 10.4963 10.1895 9.84547L16.8536 3.1814C17.3325 2.70242 17.4731 1.98916 17.2128 1.3644C16.9525 0.739649 16.3486 0.333557 15.6717 0.333557L2.34361 0.333557C1.67199 0.333557 1.06286 0.739649 0.802542 1.3644C0.542227 1.98916 0.688004 2.70242 1.16178 3.1814L7.82584 9.84547H7.83105Z" fill="white"/>
-                            </svg></span>
+                        <a class="menu-item" routerLinkActive="active" routerLink="/service">Service</a><span class="tab-heading"><svg fill="#ffffff" height="15px" width="20px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 511.787 511.787" xml:space="preserve" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M508.667,125.707c-4.16-4.16-10.88-4.16-15.04,0L255.76,363.573L18,125.707c-4.267-4.053-10.987-3.947-15.04,0.213 c-3.947,4.16-3.947,10.667,0,14.827L248.293,386.08c4.16,4.16,10.88,4.16,15.04,0l245.333-245.333 C512.827,136.693,512.827,129.867,508.667,125.707z"></path> </g> </g> </g></svg></span>
                     </div>
                         <div class="tabcontent">
                             <ul class="">
@@ -97,9 +95,6 @@
                                 </li>
                                 <li class="drop-list">
                                     <a class="menu-item" routerLink="/data-migration">Data Migration</a>
-                                </li>
-                                <li class="drop-list">
-                                    <a class="menu-item" href="/">Performance Enhancement</a>
                                 </li>
                                 <li class="drop-list">
                                     <a class="menu-item" href="/">theme development</a>
