--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -162,7 +162,6 @@
     font-style: normal;
     font-weight: 700;
     line-height: 55px;
-    text-transform: capitalize;
 }
 .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos {
     width: 100%;
@@ -385,5 +384,8 @@
     }
     .partnerships_section .partnerships_all_wrap .partner_all_wrap .partner_bottom_logos_mobile .lower-logos {
         justify-content: space-between;
+    }
+    .our_work_section .our_work_all_wrap .service-head .service-titel h2 {
+        font-size: 28px;
     }
 }
