--- a/src/styles.css
+++ b/src/styles.css
@@ -386,6 +386,7 @@ body {
     transition: all 0.90s;
     position: relative;
     overflow: hidden;
+    cursor: pointer;
 }
 /* .cdk-btn-white:hover {
     box-shadow: 0px 0px 10px 4px #ffffff;
@@ -1369,7 +1370,7 @@ body {
         line-height: 25px;
     }
     .service_mobile_tabs.mobile {
-        margin-top: 15px;
+        margin-top: 25px;
     }
     .service_tabs {
         width: 100%;
@@ -1386,7 +1387,7 @@ body {
         cursor: pointer;
         color: #ADB5BD;
         font-family: Rubik;
-        font-size: 20px;
+        font-size: 18px;
         font-style: normal;
         font-weight: 400;
         line-height: 22px;
@@ -2357,7 +2358,7 @@ html {
     }
     #service-two .container-two .all-items-wrapper .unorder-list {
         row-gap: 10px;
-        padding: 20px 0 0 20px;
+        padding: 20px 0 0 24px;
     }
     #service-two.service_section {
         padding: 55px 0px;
@@ -2859,7 +2860,7 @@ html {
         object-fit: cover;
     }
     #title-and-text .service_all_wrap .title-wrap {
-        margin: 50px;
+        margin: 50px 0;
     }
     #title-and-text .service_all_wrap .title-wrap .portfolio-title-green {
         font-size: 40px;
@@ -2954,5 +2955,11 @@ html {
     #case-slider-section .case-slider-body .case-slider-wrapper .slick-arrow.next-arrow svg,
     #case-slider-section .case-slider-body .case-slider-wrapper .slick-arrow.prev-arrow svg {
         width: 12px;
+    }
+}
+@media only screen and (max-width: 429px) {
+    #case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items {
+        max-width: 336px;
+        width: 100%;
     }
 }
