--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,11 +1,11 @@
-header {
+/* header {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     background: transparent;
     z-index: 8;
-}
+} */
 header.sticky {
     position: sticky;
     top: -1px;
@@ -14,20 +14,15 @@ header.sticky {
     background: linear-gradient(108deg, rgb(12, 55, 48) -50%, #000 99.21%);
     width: 100%;
     transition: all 0.3s ease;
+    
     animation: header-anim .2s ease .027s both;
 }
 @keyframes header-anim {
     0% {
-        opacity: 0.5;
-        -webkit-transform: translateY(-60px);
-        -ms-transform: translateY(-60px);
-        transform: translateY(-60px);
+        transform: translate3d(0, -100px, 0);
     }
     100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
+        transform: translate3d(0, 0px, 0);
     }
 }
 .main-header-wrap,
@@ -61,10 +56,11 @@ header.sticky {
     font-family: var(--second-heading);
     font-size: 16px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
     transition: all 0.5s ease-in-out;
+    letter-spacing: 0.02em;
 }
 .menu-ul li a.active {
     color: #37C8AE;
