--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="">
     <div class="container">
         <div class="main-header-wrap flex">
             <div class="logo-wrap">
